--- a/index.html
+++ b/index.html
@@ -45,10 +45,22 @@
         <img src="photo3.jpg" alt="Our love story">
         <p class="caption">"In your arms, I have found my forever home."</p>
         
-        <audio controls autoplay loop>
-            <source src="ifeelitcoming.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
+        <audio id="bg-music" loop>
+          <source src="your-audio-file.mp3" type="audio/mpeg">
         </audio>
+
+        <script>
+          document.addEventListener("DOMContentLoaded", function () {
+            let audio = document.getElementById("bg-music");
+
+    // Ensure user interacts with page to allow autoplay
+            document.body.addEventListener("click", function () {
+              audio.currentTime = 18; // Skip the first 18 seconds
+              audio.play();
+            }, { once: true });
+          });
+        </script>
+
     </div>
 </body>
 </html>
