--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For my Wifeyy Adya</title>
+    <title>For My Love</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>For My Beautiful Adu 💖</h1>
+        <h1>For My Beautiful Love 💖</h1>
         
         <img src="photo1.jpg" alt="Beautiful moment">
         <p class="caption">"You are the light of my life, my heart beats for you."</p>
@@ -45,22 +45,10 @@
         <img src="photo3.jpg" alt="Our love story">
         <p class="caption">"In your arms, I have found my forever home."</p>
         
-        <audio id="bg-music" loop>
-          <source src="your-audio-file.mp3" type="audio/mpeg">
+        <audio controls autoplay loop>
+            <source src="ifeelitcoming.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
         </audio>
-
-        <script>
-          document.addEventListener("DOMContentLoaded", function () {
-            let audio = document.getElementById("bg-music");
-
-    // Ensure user interacts with page to allow autoplay
-            document.body.addEventListener("click", function () {
-              audio.currentTime = 18; // Skip the first 18 seconds
-              audio.play();
-            }, { once: true });
-          });
-        </script>
-
     </div>
 </body>
 </html>
